<resources>
    <string name="app_name">prgHesabdari</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_connectwithUs">ارتباط با ما</string>
    <string name="action_abouteUs">درباره ما</string>

    <string name="hint_mablagh">مبلغ</string>
    <string name="hint_hesab">حساب</string>
    <string name="hint_dastebandi">دسته بندی</string>
    <string name="hint_tarikh">تاریخ</string>
    <string name="hint_tozihat">توضیحات</string>
    <string name="err_msg_mablagh">مبلغ مورد نظر را وارد کنید</string>
    <string name="err_msg_hesab">حساب مربوط به مبلغ را مشخص نمایید</string>
    <string name="err_msg_dastebandi">دسته بندی مربوط به حساب خود را وارد نمایید</string>
    <string name="err_msg_tarikh">تاریخ تراکنش مورد نظر را وارد نمایید</string>
    <string name="btn_sign_up">ذخیره</string>

    <string name="dialog_hesab_title">افزودن حساب جدید</string>
    <string name="err_dialog_hesab">لطفا نام حساب را وارد نمایید</string>

    <string name="hint_name">نام</string>
    <string name="hint_email">ایمیل</string>
    <string name="hint_password">رمز عبور</string>
    <string name="err_msg_name">نام خود را وارد نمایید</string>
    <string name="err_msg_email">ایمیل معتبری وارد کنید</string>
    <string name="err_msg_password">رمز عبور را وارد کنید</string>
    <string name="title_activity_dastehaye_koli">DastehayeKoliActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
